new features for branch 3

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <div>Local Report</div>
-    <h1>THis is a new features </h1>
+    <h1>THis is a new features for branch f3 </h1>
 </body>
 </html>
