--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <div>Local Report</div>
     <h1>THis is a new features for branch f3 </h1>
+    <p>New feature3 added</p>
 </body>
 </html>
